Fixed and modified tasks related with OFT actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
 		"classes/**/*",
 		"test/**/*",
 		"typechain/**/*",
-		"types/**/*"
+		"types/**/*",
+		"utils/**/*",
+		"./hardhat.config.ts"
 	],
 	"files": ["./hardhat.config.ts"]
 }
